--- a/products/all.html
+++ b/products/all.html
@@ -17,10 +17,10 @@
     <div id="prod_banner" class="row prod-banner">
         <div id="prod_menu" class="fixed-top prod-menu">
             <div class="row align-items-center">
-                <div class="col-sm-1 prod-banner-item"></div>
+                <div class="col-sm-1 prod-banner-item selected"></div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='all.html';">Products</div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='../event/event.html';">Events</div>
-                <div class="col-sm-2 prod-banner-item-logo selected"onclick="window.location='../index.html';"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
+                <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='../index.html';"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='../about-us.html';">About us</div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='../contact.html';">Contact us</div>
                 <div class="col-sm-1">
@@ -46,7 +46,7 @@
                             </div>                                 
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary close-footer">Continue</button>
-                                <button type="button" class="btn btn-primary order">Thanh Toán</button>
+                                <button type="button" class="btn btn-primary order">Pay</button>
                             </div>
                         </div>  
                     </div>
