--- a/contact.html
+++ b/contact.html
@@ -66,9 +66,9 @@
            <div class="col-md-6 c">
             <h2>THE CAKES</h2>
             <p>_______________________________________</p>
-            <p>Địa chỉ: 606 Đường 3 Tháng 2 Phường 14 Quận 10 Thành Phố HCM</p>
-            <p>Thời gian làm việc:</p>
-            <li>T2-T6: 8:00-17:00</li>
+            <p>Địa chỉ: 606 road 3 Tháng 2 woad 14 District 10  HCM</p>
+            <p>Open time:</p>
+            <li>T2-T6: 8:00 AM-23:00 PM</li>
             <p>Hotline: 09124925291</p>
             <p>Email: phamvannguyen21511@gmail.com</p>
            </div>
