--- a/about-us.html
+++ b/about-us.html
@@ -118,7 +118,7 @@
       </div>
     </div>
       <div class="rol-xs-6 col col-sm-6">
-        <img id="img1" src="images/source/beptruong.jpg">
+        <img id="img1" src="images/source/ows_157987338791780.jpg">
       </div>
     </div>
   </div>
