--- a/about-us.html
+++ b/about-us.html
@@ -183,6 +183,6 @@
 
       <script src="js/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <script src="js/product_all.js"></script>
+      <script src="js/product.js"></script>
 </body>
 </html>
