--- a/index.html
+++ b/index.html
@@ -52,40 +52,14 @@
                 </div>
             </div>
         </div>
-            <div class="container prod-banner-headline">
-                <div class="row align-items-center justify-content-center prod-banner-title">Discover Sweet Delicious
-                </div>
-                <div class="row align-items-center justify-content-center prod-banner-desc">From our heart to your special present
-                </div>
-            </div>
+            
+                <video autoplay muted loop id="myVideo">
+                    <source src="images/source/clip cake.mp4" type="video/mp4">
+                </video>
+                <img class="bannerss1" src="images/source/bg-chu-mau-xanh.png" alt="" height="700px">                   
         </div>
-        
-    </div>
 
-<!-- The cake story-->
-    <div class="story">
-        <div class="row sto">
-         <div class="col-md-6"> 
-           <p id="p3">
-              <h3>The Cake Story__________</h3>
-              <div id="dv">
-                The Cake Shop was founded by a team of passionate and dedicated bakers who are committed in baking the most delicious cakes and pastries around. Using only the freshest ingredients we can find, you can be sure that you are served the best quality cake you can ever have.
-We have evolved to become one of a premium distributor and wholesaler for cakes and pastries to some well known resturants, cafes, supermart, hotels and bakery.
 
-               <br> <br>
-               Our online store is a leading online shop in Singapore providing cakes and gifts deliveries within VietNam. We provide competitive prices, good after sales services and on-time delivery.
-The Cake Shop provides same day delivery service seven days a week, including Sunday, within Singapore to provide a high level of customer service.
-Bon Appetite!!
-              </div> 
-              <a href="about-us.html"><button class="bnt">Read more</button></a>
-           </p>
-         </div>
-         <div class="col-md-6 c">
-           <img id="section" src="images/source/section2.jpg">
-         </div>
-         </div>
-        </div>
-      </div>
 
     <!-- Our suggesstion-->
     <div id="prod_slider" class="container">
@@ -166,6 +140,31 @@ Bon Appetite!!
             </div>
         </div>
     </div>  
+
+    <!-- The cake story-->
+    <div class="story">
+        <div class="row sto">
+         <div class="col-md-6"> 
+           <p id="p3">
+              <h3>The Cake Story__________</h3>
+              <div id="dv">
+                The Cake Shop was founded by a team of passionate and dedicated bakers who are committed in baking the most delicious cakes and pastries around. Using only the freshest ingredients we can find, you can be sure that you are served the best quality cake you can ever have.
+We have evolved to become one of a premium distributor and wholesaler for cakes and pastries to some well known resturants, cafes, supermart, hotels and bakery.
+
+               <br> <br>
+               Our online store is a leading online shop in Singapore providing cakes and gifts deliveries within VietNam. We provide competitive prices, good after sales services and on-time delivery.
+The Cake Shop provides same day delivery service seven days a week, including Sunday, within Singapore to provide a high level of customer service.
+Bon Appetite!!
+              </div> 
+              <a href="about-us.html"><button class="bnt">Read more</button></a>
+           </p>
+         </div>
+         <div class="col-md-6 c">
+           <img id="section" src="images/source/section2.jpg">
+         </div>
+         </div>
+        </div>
+      </div>
 
      <!--Our Service-->
     <div class="row db">
