--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div id="prod_menu" class="fixed-top prod-menu">
         <div class="row align-items-center">
             <div class="col-sm-1 prod-banner-item"></div>
-            <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
+            <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all-1.html';">Products</div>
             <div class="col-sm-2 prod-banner-item"onclick="window.location='event/event.html';">Events</div>
             <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
             <div class="col-sm-2 prod-banner-item" onclick="window.location='about-us.html';">About us</div>
@@ -98,7 +98,7 @@
               
               <li><a href="../index.html">HOME</a></li>
               <li><a href="../about-us.html">ABOUT US</a></li>
-              <li><a href="all.html">PRODUCTS</a></li>
+              <li><a href="all-1.html">PRODUCTS</a></li>
               <li><a href="../event/event.html">EVENT</a></li>
               <li><a href="../contact.html">CONTACT</a></li>
           </ul>
