--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
     <div id="prod_menu" class="fixed-top prod-menu">
         <div class="row align-items-center">
             <div class="col-sm-1 prod-banner-item"></div>
-            <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all.html';">Products</div>
+            <div class="col-sm-2 prod-banner-item" onclick="window.location='products/all-1.html';">Products</div>
             <div class="col-sm-2 prod-banner-item"onclick="window.location='event/event.html';">Events</div>
             <div class="col-sm-2 prod-banner-item-logo"onclick="window.location='index.html';"><img src="images/logo/logo-The-Cake.png" alt="Logo" width="100" height="100"></div>
             <div class="col-sm-2 prod-banner-item selected" onclick="window.location='about-us.html';">About us</div>
@@ -131,11 +131,11 @@
       <div class="col-md-2 footer-nav animated fadeInUp">
           <h4>MENU</h4>
           <ul class="pages">                   
-              <li><a href="../index.html">HOME</a></li>
-              <li><a href="../about-us.html">ABOUT US</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="about-us.html">ABOUT US</a></li>
               <li><a href="products/all.html">PRODUCTS</a></li>
-              <li><a href="../event/event.html">EVENT</a></li>
-              <li><a href="../contact.html">CONTACT</a></li>
+              <li><a href="event/event.html">EVENT</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
           </ul>
       </div>
       <div class="col-md-3 footer-nav animated fadeInUp">
@@ -146,8 +146,8 @@
           </ul>
           <h4>FOLLOW US</h4>
           <div class="footer-icon">
-              <span><a href="Facebook.com/thecake" target="_blank" ><img src="../images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></a></span>
-              <span><a href="instagram.com/thecake" target="_blank" ><img src="../images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></a></span>
+              <span><a href="Facebook.com/thecake" target="_blank" ><img src="images/logo/icon fb.png" alt="Logo FB" height="30px" width="30px"></a></span>
+              <span><a href="instagram.com/thecake" target="_blank" ><img src="images/logo/icon ins.png" alt="Logo Instagram" height="30px" width="30px"></a></span>
           </div>
       </div>
       <div class="col-md-3 footer-social animated fadeInUp">
