--- a/about-us.html
+++ b/about-us.html
@@ -141,7 +141,7 @@
       <div class="col-md-3 footer-nav animated fadeInUp">
           <h4>SUPPORT</h4>
           <ul class="list">
-              <li><a href="../contact.html">CONTACT US</a></li>
+              <li><a href="contact.html">CONTACT US</a></li>
               <li><a href="mailto:thecake@gmail.com">SEND EMAIL</a></li>
           </ul>
           <h4>FOLLOW US</h4>
