--- a/event/event.html
+++ b/event/event.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 
 <body>
@@ -121,7 +122,7 @@
                         <div class="wrap-product">  
                                 <img src="sources/camp06.jpg" alt="">
                                 <h2 class="name-product">Discount on Christmas</h2>
-                                <p class="number">Type "LOVETHECAKE" to get 10% discount on your bill</p>
+                                <p class="number">Type "LOVETHECAKE" to get 20% discount on your bill</p>
                                 
                         </div>
                     </div>
@@ -178,7 +179,7 @@
                     
                     <li><a href="../index.html">HOME</a></li>
                     <li><a href="../about-us.html">ABOUT US</a></li>
-                    <li><a href="all-1.html">PRODUCTS</a></li>
+                    <li><a href="..//products/all-1.html">PRODUCTS</a></li>
                     <li><a href="../event/event.html">EVENT</a></li>
                     <li><a href="../contact.html">CONTACT</a></li>
                 </ul>
