--- a/products/birthday.html
+++ b/products/birthday.html
@@ -17,9 +17,9 @@
         <div id="prod_menu" class="fixed-top prod-menu">
             <div class="row align-items-center">
                 <div class="col-sm-1 prod-banner-item"></div>
-                <div class="col-sm-2 prod-banner-item" onclick="window.location='all-1.html';">Products</div>
+                <div class="col-sm-2 prod-banner-item  selected" onclick="window.location='all-1.html';">Products</div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='../event/event.html';">Events</div>
-                <div class="col-sm-2 prod-banner-item-logo selected" onclick="window.location='../index.html';"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
+                <div class="col-sm-2 prod-banner-item-logo" onclick="window.location='../index.html';"><img src="../images/logo/logo-The-Cake.png" alt="Logo" width="90" height="90"></div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='../about-us.html';">About us</div>
                 <div class="col-sm-2 prod-banner-item" onclick="window.location='../contact.html';">Contact us</div>
                 <div class="col-sm-1">
@@ -36,119 +36,119 @@
                                     <span class="cart-price cart-column">Price</span>
                                     <span class="cart-quantity cart-column">Quantity</span>
                                 </div>
-                                <div class="cart-items ">
+                                <div class="cart-items">
                                 </div>
-                                <div class="cart-total ">
-                                    <strong class="cart-total-title ">Sum:</strong>
-                                    <span class="cart-total-price ">0$</span>
+                                <div class="cart-total">
+                                    <strong class="cart-total-title">Sum:</strong>
+                                    <span class="cart-total-price">0$</span>
                                 </div>
                             </div>
-                            <div class="modal-footer ">
-                                <button type="button " class="btn btn-secondary close-footer ">Continue</button>
-                                <button type="button " class="btn btn-primary order ">Pay</button>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary close-footer">Continue</button>
+                                <button type="button" class="btn btn-primary order">Pay</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container prod-banner-headline ">
-            <div class="row align-items-center justify-content-center prod-banner-title ">Discover Sweet Delicious
+        <div class="container prod-banner-headline">
+            <div class="row align-items-center justify-content-center prod-banner-title">Discover Sweet Delicious
             </div>
-            <div class="row align-items-center justify-content-center prod-banner-desc ">From our heart to your special present
+            <div class="row align-items-center justify-content-center prod-banner-desc">From our heart to your special present
             </div>
         </div>
     </div>
 
     </div>
 
-    <div id="prod_slider " class="container ">
-        <div class="row ">
-            <div class="col-md-6 offset-md-3 prod_slider_suggestion ">Our Suggestion</div>
+    <div id="prod_slider" class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 prod_slider_suggestion">Our Suggestion</div>
         </div>
-        <div class="row ">
-            <div class="container-fluid ">
-                <div id="carousel-example " class="carousel slide " data-ride="carousel ">
-                    <div class="carousel-inner row w-100 mx-auto " role="listbox ">
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active ">
-                            <img src="../images/source/cake1.png " class="img-fluid mx-auto d-block " alt="C1 ">
-                            <div class="prod-item-des ">Tropical Summer
+        <div class="row">
+            <div class="container-fluid">
+                <div id="carousel-example" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
+                            <img src="../images/source/cake1.png" class="img-fluid mx-auto d-block" alt="C1">
+                            <div class="prod-item-des">Tropical Summer
                                 <br>53$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
 
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/source/cake2.png " class="img-fluid mx-auto d-block " alt="C2 ">
-                            <div class="prod-item-des ">Red Fall
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/source/cake2.png" class="img-fluid mx-auto d-block" alt="C2">
+                            <div class="prod-item-des">Red Fall
                                 <br>55$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/source/cake3.png " class="img-fluid mx-auto d-block " alt="C3 ">
-                            <div class="prod-item-des ">Mr.Ore0
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/source/cake3.png" class="img-fluid mx-auto d-block" alt="C3">
+                            <div class="prod-item-des">Mr.Ore0
                                 <br>54$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/source/cake4.png " class="img-fluid mx-auto d-block " alt="C4 ">
-                            <div class="prod-item-des ">A Little You
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/source/cake4.png" class="img-fluid mx-auto d-block" alt="C4">
+                            <div class="prod-item-des">A Little You
                                 <br>42$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/source/cake5.png " class="img-fluid mx-auto d-block " alt="C5 ">
-                            <div class="prod-item-des ">Miss The Rain
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/source/cake5.png" class="img-fluid mx-auto d-block" alt="C5">
+                            <div class="prod-item-des">Miss The Rain
                                 <br>38$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/001.png " class="img-fluid mx-auto d-block " alt="C6 ">
-                            <div class="prod-item-des ">Take My Hand
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/001.png" class="img-fluid mx-auto d-block" alt="C6">
+                            <div class="prod-item-des">Take My Hand
                                 <br>67$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/002.png " class="img-fluid mx-auto d-block " alt="C7 ">
-                            <div class="prod-item-des ">Simple Love
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/002.png" class="img-fluid mx-auto d-block" alt="C7">
+                            <div class="prod-item-des">Simple Love
                                 <br>47$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
-                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 ">
-                            <img src="../images/003.png " class="img-fluid mx-auto d-block " alt="img8 ">
-                            <div class="prod-item-des ">Macaron Love
+                        <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
+                            <img src="../images/003.png" class="img-fluid mx-auto d-block" alt="img8">
+                            <div class="prod-item-des">Macaron Love
                                 <br>69$
-                                <br> <button type="button " class="btn btn-primary button " onclick=" window.open( 'order_form.html', '_blank') ">ORDER NOW</button>
+                                <br> <button type="button" class="btn btn-primary button" onclick=" window.open('order_form.html', '_blank')">ORDER NOW</button>
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control-prev prod-slider-button " href="#carousel-example " role="button " data-slide="prev ">
-                        <span class="carousel-control-prev-icon " aria-hidden="true "></span>
-                        <span class="sr-only ">Previous</span>
+                    <a class="carousel-control-prev prod-slider-button" href="#carousel-example" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next prod-slider-button " href="#carousel-example " role="button " data-slide="next ">
-                        <span class="carousel-control-next-icon " aria-hidden="true "></span>
-                        <span class="sr-only ">Next</span>
+                    <a class="carousel-control-next prod-slider-button" href="#carousel-example" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div id="prod_type " class="container ">
-        <div class="d-flex justify-content-around mb-6 ">
-            <div class="p-2 prod-type-item " data-url="all-1.html ">All the cakes</div>
-            <div class="p-2 prod-type-item selected " data-url="birthday.html ">Birthday</div>
-            <div class="p-2 prod-type-item " data-url="anniversary.html ">Anniversary</div>
-            <div class="p-2 prod-type-item " data-url="mariage.html ">Marriage</div>
-            <div class="p-2 prod-type-item " data-url="engagement.html ">Engagement</div>
-            <div class="p-2 prod-type-item " data-url="others.html ">Others</div>
+    <div id="prod_type" class="container">
+        <div class="d-flex justify-content-around mb-6">
+            <div class="p-2 prod-type-item" data-url="all-1.html">All the cakes</div>
+            <div class="p-2 prod-type-item selected" data-url="birthday.html">Birthday</div>
+            <div class="p-2 prod-type-item" data-url="anniversary.html">Anniversary</div>
+            <div class="p-2 prod-type-item" data-url="mariage.html">Marriage</div>
+            <div class="p-2 prod-type-item" data-url="engagement.html">Engagement</div>
+            <div class="p-2 prod-type-item" data-url="others.html">Others</div>
         </div>
     </div>
 
