--- a/products/mariage.html
+++ b/products/mariage.html
@@ -143,10 +143,10 @@
 
     <div id="prod_type" class="container">
         <div class="d-flex justify-content-around mb-6">
-            <div class="p-2 prod-type-item selected" data-url="all-1.html">All the cakes</div>
+            <div class="p-2 prod-type-item" data-url="all-1.html">All the cakes</div>
             <div class="p-2 prod-type-item" data-url="birthday.html">Birthday</div>
             <div class="p-2 prod-type-item" data-url="anniversary.html">Anniversary</div>
-            <div class="p-2 prod-type-item" data-url="mariage.html">Marriage</div>
+            <div class="p-2 prod-type-item selected" data-url="mariage.html">Marriage</div>
             <div class="p-2 prod-type-item" data-url="engagement.html">Engagement</div>
             <div class="p-2 prod-type-item" data-url="others.html">Others</div>
         </div>
