--- a/products/all-1.html
+++ b/products/all-1.html
@@ -321,14 +321,14 @@
             <li class="page-item disabled">
                 <a class="page-link" href="#" tabindex="-1">Previous</a>
             </li>
-            <li class="page-item"><a class="page-link active" href="all-1.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="all-2.html">2</a></li>
-            <li class="page-item"><a class="page-link" href="all-3.html">3</a></li>
-            <li class="page-item"><a class="page-link" href="all-4.html">4</a></li>
-            <li class="page-item"><a class="page-link" href="all-5.html">5</a></li>
-            <li class="page-item"><a class="page-link" href="all-6.html">6</a></li>
+            <li class="page-item"><a class="page-link active" href="all-1.html#prod-items">1</a></li>
+            <li class="page-item"><a class="page-link" href="all-2.html#prod-items">2</a></li>
+            <li class="page-item"><a class="page-link" href="all-3.html#prod-items">3</a></li>
+            <li class="page-item"><a class="page-link" href="all-4.html#prod-items">4</a></li>
+            <li class="page-item"><a class="page-link" href="all-5.html#prod-items>5</a></li>
+            <li class="page-item"><a class="page-link" href="all-6.html#prod-items">6</a></li>
             <li class="page-item">
-                <a class="page-link" href="all-2.html">Next</a>
+                <a class="page-link" href="all-2.html#prod-items">Next</a>
             </li>
         </ul>
     </div>
