--- a/products/anniversary-2.html
+++ b/products/anniversary-2.html
@@ -238,8 +238,8 @@
 
 
         <ul class="pagination justify-content-center " id="prod-pagination ">
-            <li class="page-item "><a class="page-link " href="anniversary.html ">Previous</a></li>
-            <li class="page-item "><a class="page-link " href="anniversary.html ">1</a></li>
+            <li class="page-item "><a class="page-link " href="anniversary.html#prod-items ">Previous</a></li>
+            <li class="page-item "><a class="page-link " href="anniversary.html#prod-items ">1</a></li>
             <li class="page-item "><a class="page-link active " href="# ">2</a></li>
             <li class="page-item disabled ">
                 <a class="page-link " href="# " tabindex="-1 ">Next</a>
