--- a/products/anniversary.html
+++ b/products/anniversary.html
@@ -322,8 +322,8 @@
                 <a class="page-link " href="# " tabindex="-1 ">Previous</a>
             </li>
             <li class="page-item "><a class="page-link active " href="# ">1</a></li>
-            <li class="page-item "><a class="page-link " href="anniversary-2.html ">2</a></li>
-            <li class="page-item "><a class="page-link " href="anniversary-2.html ">Next</a></li>
+            <li class="page-item "><a class="page-link " href="anniversary-2.html#prod-items ">2</a></li>
+            <li class="page-item "><a class="page-link " href="anniversary-2.html#prod-items ">Next</a></li>
         </ul>
     </div>
     <!--       Footer      -->
