--- a/products/birthday.html
+++ b/products/birthday.html
@@ -323,9 +323,9 @@
                 <a class="page-link " href="# " tabindex="-1 ">Previous</a>
             </li>
             <li class="page-item "><a class="page-link active " href="# ">1</a></li>
-            <li class="page-item "><a class="page-link " href="birthday-2.html ">2</a></li>
+            <li class="page-item "><a class="page-link " href="birthday-2.html#prod-items ">2</a></li>
             <li class="page-item ">
-                <a class="page-link " href="birthday-2.html ">Next</a>
+                <a class="page-link " href="birthday-2.html#prod-items ">Next</a>
             </li>
         </ul>
     </div>
