--- a/about-us.html
+++ b/about-us.html
@@ -163,7 +163,9 @@
                         <div class="heading-right">
                             Global Presence
                         </div>
-                        We want to be where you are – with over 1,600 locations worldwide, TOUS les JOURS continues to grow. Wherever you may be in the world, TOUS les JOURS will be there to give the taste of home.
+                        We want to be where you are – with over 1,600 locations worldwide, 
+                        THE CAKE continues to grow. Wherever you may be in the world, 
+                        THE CAKE will be there to give the taste of home.
                     </div>
                 </div>
             </div>
