--- a/about-us.html
+++ b/about-us.html
@@ -14,6 +14,7 @@
     <link rel="shortcut icon" href="ico/favicon.ico" />
     <link rel="stylesheet" href="css/about-us.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/product.css">
 </head>
 
 <body>
