--- a/about-us.html
+++ b/about-us.html
@@ -148,7 +148,8 @@
                         <div class="heading-left">
                             Joyful Experience
                         </div>
-                        TWe want to not only bring great food, but smiles to our patrons’ faces. Whether it be in form of breakfast, lunch, or dessert, TOUS les JOURS wants to be the flavor that brings joy to your day.
+                        TWe want to not only bring great food, but smiles to our patrons’ faces. 
+                        Whether it be in form of breakfast, lunch, or dessert, THE CAKE wants to be the flavor that brings joy to your day.
                     </div>
                 </div>
             </div>
