--- a/event/event.html
+++ b/event/event.html
@@ -130,7 +130,7 @@
                     <div class="wrap-product">
                         <img src="sources/camp06.jpg" alt="">
                         <h2 class="name-product">Discount on Christmas</h2>
-                        <p class="number">Type"LOVETHECAKE" to get 20% discount on your bill</p>
+                        <p class="number">Type"SALE20" to get 20% discount on your bill</p>
 
                     </div>
                 </div>
